--- a/app/src/main/res/layout/fragment_vehiculos.xml
+++ b/app/src/main/res/layout/fragment_vehiculos.xml
@@ -4,10 +4,10 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="es.unex.fulltank.bd.ui.gallery.GalleryFragment">
+    tools:context="es.unex.fulltank.bd.ui.vehiculos.VehiculosFragment">
 
     <TextView
-        android:id="@+id/text_gallery"
+        android:id="@+id/text_vehiculos"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
