--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -6,5 +6,5 @@
     android:name="com.google.android.gms.maps.SupportMapFragment"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="es.unex.fulltank.bd.ui.home.HomeFragment"
+    tools:context=".ui.home.HomeFragment"
     />
