--- a/app/src/main/res/layout/fragment_favoritos.xml
+++ b/app/src/main/res/layout/fragment_favoritos.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="es.unex.fulltank.bd.ui.favoritos.FavoritosFragment">
+    tools:context=".ui.favoritos.FavoritosFragment">
 
     <TextView
         android:id="@+id/text_favoritos"
