--- a/app/src/main/res/layout/fragment_historico_repostaje.xml
+++ b/app/src/main/res/layout/fragment_historico_repostaje.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="es.unex.fulltank.bd.ui.historicoRepostaje.HistoricoRepostajeFragment">
+    tools:context=".ui.historicoRepostaje.HistoricoRepostajeFragment">
 
     <TextView
         android:id="@+id/text_historicoRepostaje"
