PGD02-12 CU14_IT7_IMP_Implement Components

--- a/app/src/main/res/layout/activity_gasolinera_detalle.xml
+++ b/app/src/main/res/layout/activity_gasolinera_detalle.xml
@@ -1,9 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/contenedorGasolineras"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:onClick="favoritos"
     tools:context=".GasolineraDetalleActivity">
 
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/fbFav"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="40dp"
+        android:layout_marginBottom="44dp"
+        android:clickable="true"
+        android:contentDescription="Botón favoritos"
+        android:onClick="favoritos"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:srcCompat="@drawable/ic_menu_favoritos" />
 </androidx.constraintlayout.widget.ConstraintLayout>
