--- a/docs/css/styles.css
+++ b/docs/css/styles.css
@@ -437,7 +437,6 @@ the display flex can serve as a backup. */
 
 body {
   font-family: 'Roboto', serif;
-  font-weight: 300;
   color: #fefffe;
   background: #111;
 }
@@ -476,6 +475,7 @@ button, .btn {
   font-weight: 100;
   text-transform: uppercase;
   margin-bottom: 2rem;
+  font-weight:bold;
 }
 
 .display-flex-between {
@@ -592,7 +592,9 @@ h1, h2, h3, h4, h5, h6 {
 
 .content-wrapper {
   position: relative;
-  padding: 5rem 20%;
+  padding-top: 5%;
+  padding-left: 15%;
+  padding-right: 15%;
   width: 100%;
   margin: 0 auto;
   overflow: hidden;
@@ -600,7 +602,6 @@ h1, h2, h3, h4, h5, h6 {
 
 .content-wrapper-lg {
   position: relative;
-  padding: 12rem 20%;
   width: 100%;
   margin: 0 auto;
 }
@@ -881,4 +882,26 @@ footer .social-links ul li a {
   font-size: 1.5rem;
   color: #fefffe;
   display: block;
+}
+
+p{
+  font-weight: bold;
+}
+
+.lista{
+  font-weight: bold;
+}
+
+.fondo{
+  background:url(../img/city1.png)fixed center;
+  background-attachment: fixed;
+  background-position: center;
+}
+
+.imagen{
+  height: 500px;
+}
+
+td{
+  width: 800px;
 }
